<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExpense">

    <EditText
        android:id="@+id/expense_title"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/expense_name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <EditText
        android:id="@+id/expense_amount"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/expense_title"
        app:layout_constraintStart_toStartOf="@id/expense_title"
        app:layout_constraintEnd_toEndOf="@id/expense_title"
        android:hint="@string/expense_amount"
        android:inputType="number"
        android:layout_marginTop="20dp"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="20dp"
        android:text="@string/category_heading"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="@id/category_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expense_amount"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:gravity="end"
        android:paddingEnd="30dp"
        android:scrollbarSize="@dimen/material_emphasis_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expense_amount" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text"
        app:layout_constraintTop_toBottomOf="@id/category_spinner"
        app:layout_constraintStart_toStartOf="@id/expense_amount"
        app:layout_constraintEnd_toEndOf="@id/expense_amount"
        android:layout_marginTop="20dp"
        android:backgroundTint="#808080"
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>