<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_budget_view">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_budget_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="37sp"
                android:layout_margin="15dp" />

            <TextView
                android:id="@+id/expense_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_expenses_text"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="30sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_new_budget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/add_budget_button_text"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/delete_budget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/delete_budget_button_text"
                    tools:ignore="ButtonStyle"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>